[gd_scene load_steps=40 format=3 uid="uid://h3i5gc0ryenh"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_8bgxb"]
[ext_resource type="Texture2D" uid="uid://ds24jidhoytug" path="res://assets/player/chonky-left.png" id="2_uva7f"]
[ext_resource type="Texture2D" uid="uid://5jbxda6i1gr1" path="res://assets/player/chonky-right.png" id="3_badim"]
[ext_resource type="Texture2D" uid="uid://da2ohsntu2lc6" path="res://assets/player/idle.png" id="4_bnms7"]
[ext_resource type="Texture2D" uid="uid://dhc2f2a0ivlq5" path="res://assets/player/chonky-dance.png" id="5_kd4lg"]
[ext_resource type="Texture2D" uid="uid://n3whl37nj8fn" path="res://assets/player/chonkyClimb.png" id="6_5dcb5"]
[ext_resource type="AudioStream" uid="uid://cxdqfu1fwifmf" path="res://assets/audio/EpikMoosic.ogg" id="6_32d6w"]
[ext_resource type="AudioStream" uid="uid://bd44gnoawbsl1" path="res://assets/audio/DanceDanceRevloution.ogg" id="7_071do"]
[ext_resource type="AudioStream" uid="uid://cefkyi3vdwqes" path="res://assets/audio/background/Elevator.ogg" id="8_1wv2j"]
[ext_resource type="Texture2D" uid="uid://baekfp3igmnse" path="res://assets/controls/LeftArrow.png" id="9_j76um"]
[ext_resource type="AudioStream" uid="uid://bmrl84eny86y1" path="res://assets/audio/background/NormalBG.ogg" id="9_s5naw"]
[ext_resource type="Texture2D" uid="uid://c2arlclb0kqa6" path="res://assets/controls/RightArrow.png" id="10_2ugt7"]
[ext_resource type="AudioStream" uid="uid://fulen6fb0odo" path="res://assets/audio/Death.ogg" id="10_aor2r"]
[ext_resource type="Texture2D" uid="uid://ba7wv7q30fk5g" path="res://assets/graphics/AButton.png" id="11_y41yq"]
[ext_resource type="Texture2D" uid="uid://dwu6j6a6fqums" path="res://assets/graphics/XButton.png" id="12_fqutd"]
[ext_resource type="Texture2D" uid="uid://bac88jqg1upis" path="res://assets/Menu.png" id="13_n4pk7"]
[ext_resource type="Texture2D" uid="uid://3a31p4kodog" path="res://assets/graphics/YButton.png" id="14_lkvpf"]
[ext_resource type="Texture2D" uid="uid://os56x15agqbt" path="res://assets/controls/UpArrow.png" id="17_xyxhs"]
[ext_resource type="Texture2D" uid="uid://kk23a5ju4qet" path="res://assets/controls/DownArrow.png" id="18_ircvx"]
[ext_resource type="Texture2D" uid="uid://nd4txoqt548f" path="res://assets/graphics/BButton.png" id="19_g0tti"]
[ext_resource type="StyleBox" uid="uid://c7doboqhbf41q" path="res://Styles/Normal.tres" id="19_okrwj"]
[ext_resource type="StyleBox" uid="uid://bq3kuqasu1v87" path="res://Styles/focus.tres" id="20_8g3gr"]
[ext_resource type="PackedScene" uid="uid://cl0ve1l30diqj" path="res://scenes/timestop.tscn" id="23_tykk5"]

[sub_resource type="Animation" id="Animation_c4pcb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ChonkyLeft:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_kac42"]
resource_name = "move_left"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ChonkyLeft:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_af7wl"]
_data = {
"RESET": SubResource("Animation_c4pcb"),
"move_left": SubResource("Animation_kac42")
}

[sub_resource type="Animation" id="Animation_2srs7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_8cai6"]
resource_name = "move_right"
length = 1.21
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r81gu"]
_data = {
"RESET": SubResource("Animation_2srs7"),
"move_right": SubResource("Animation_8cai6")
}

[sub_resource type="Animation" id="Animation_xft17"]
resource_name = "idle"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jyr6h"]
_data = {
"idle": SubResource("Animation_xft17")
}

[sub_resource type="Animation" id="Animation_sdb2n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_822ld"]
resource_name = "dance"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nngno"]
_data = {
"RESET": SubResource("Animation_sdb2n"),
"dance": SubResource("Animation_822ld")
}

[sub_resource type="Animation" id="Animation_sjaw3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_0juod"]
resource_name = "climb"
length = 0.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rx44v"]
_data = {
"RESET": SubResource("Animation_sjaw3"),
"climb": SubResource("Animation_0juod")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p1rha"]
size = Vector2(36, 85.3659)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u0xf6"]

[node name="Player" type="CharacterBody2D"]
scale = Vector2(1.64, 1.64)
script = ExtResource("1_8bgxb")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = -573.0
offset_top = -513.0
offset_right = 22033.0
offset_bottom = 649.0
scale = Vector2(0.05, 0.05)
theme_override_font_sizes/normal_font_size = 500
text = "Deaths: 0"

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
offset_left = -573.0
offset_top = -483.537
offset_right = 22033.0
offset_bottom = 678.463
scale = Vector2(0.05, 0.05)
theme_override_font_sizes/normal_font_size = 500
text = "Coins: 0"

[node name="ChonkyLeft" type="Sprite2D" parent="."]
position = Vector2(1, -63)
scale = Vector2(1.998, 2.997)
texture = ExtResource("2_uva7f")
hframes = 13

[node name="AnimationPlayer" type="AnimationPlayer" parent="ChonkyLeft"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_af7wl")
}

[node name="ChonkyRight" type="Sprite2D" parent="."]
position = Vector2(1, -63)
scale = Vector2(1.998, 2.997)
texture = ExtResource("3_badim")
hframes = 14

[node name="AnimationPlayer" type="AnimationPlayer" parent="ChonkyRight"]
libraries = {
"": SubResource("AnimationLibrary_r81gu")
}

[node name="IdleChonky" type="Sprite2D" parent="."]
position = Vector2(0.999996, -63)
scale = Vector2(1.998, 2.997)
texture = ExtResource("4_bnms7")
hframes = 3
vframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="IdleChonky"]
libraries = {
"": SubResource("AnimationLibrary_jyr6h")
}

[node name="DanceChonky" type="Sprite2D" parent="."]
position = Vector2(1, -63)
scale = Vector2(1.998, 2.997)
texture = ExtResource("5_kd4lg")
hframes = 7

[node name="AnimationPlayer" type="AnimationPlayer" parent="DanceChonky"]
libraries = {
"": SubResource("AnimationLibrary_nngno")
}

[node name="ClimbChonky" type="Sprite2D" parent="."]
position = Vector2(1, -63)
scale = Vector2(1.998, 2.997)
texture = ExtResource("6_5dcb5")
hframes = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="ClimbChonky"]
libraries = {
"": SubResource("AnimationLibrary_rx44v")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -62.1951)
shape = SubResource("RectangleShape2D_p1rha")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -189)

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -586.0
offset_top = -521.0
offset_right = -514.0
offset_bottom = -481.0
scale = Vector2(16.4297, 16.698)
color = Color(0, 0, 0, 1)

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
visible = false
offset_left = -134.146
offset_top = -269.512
offset_right = 6072.85
offset_bottom = 2176.49
scale = Vector2(0.05, 0.05)
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_font_sizes/normal_font_size = 1000
text = "Level Complete!"
fit_content = true

[node name="Dance" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_32d6w")

[node name="Dance2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_071do")
volume_db = -23.85

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_1wv2j")
volume_db = -15.0
autoplay = true

[node name="BackgroundMusic2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_s5naw")
volume_db = -24.361

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_aor2r")

[node name="MobileControls" type="Node2D" parent="."]
visible = false
position = Vector2(-564.024, 40.8537)
scale = Vector2(3.29269, 3.29269)

[node name="Left" type="TouchScreenButton" parent="MobileControls"]
position = Vector2(-0.370494, -18.1482)
scale = Vector2(2.62222, 2.62222)
texture_normal = ExtResource("9_j76um")

[node name="Right" type="TouchScreenButton" parent="MobileControls"]
position = Vector2(44.6294, -18.1482)
scale = Vector2(2.62248, 2.62248)
texture_normal = ExtResource("10_2ugt7")

[node name="Jump" type="TouchScreenButton" parent="MobileControls"]
position = Vector2(292.407, -9.44444)
scale = Vector2(0.987653, 0.978834)
texture_normal = ExtResource("11_y41yq")

[node name="Interact" type="TouchScreenButton" parent="MobileControls"]
position = Vector2(269.999, -32.5925)
scale = Vector2(0.996471, 0.970016)
texture_normal = ExtResource("12_fqutd")

[node name="Menu" type="TouchScreenButton" parent="MobileControls"]
position = Vector2(-2.7779, -145)
scale = Vector2(6.3111, 4.2814)
texture_normal = ExtResource("13_n4pk7")

[node name="Dance" type="TouchScreenButton" parent="MobileControls"]
position = Vector2(292.407, -57.0369)
scale = Vector2(1.00529, 0.970016)
texture_normal = ExtResource("14_lkvpf")

[node name="Up" type="TouchScreenButton" parent="MobileControls"]
position = Vector2(23.7035, -40.5555)
scale = Vector2(2.653, 2.59949)
texture_normal = ExtResource("17_xyxhs")

[node name="Down" type="TouchScreenButton" parent="MobileControls"]
position = Vector2(23.7035, 0.370308)
scale = Vector2(2.62248, 2.62248)
texture_normal = ExtResource("18_ircvx")

[node name="Dialog" type="TouchScreenButton" parent="MobileControls"]
position = Vector2(314.073, -32.5925)
scale = Vector2(0.987651, 0.978834)
texture_normal = ExtResource("19_g0tti")

[node name="Menu2" type="Node2D" parent="."]
process_mode = 3
visible = false
position = Vector2(-210.976, -461.585)
scale = Vector2(3.58537, 4.41463)

[node name="ColorRect" type="ColorRect" parent="Menu2"]
offset_left = -1.19047
offset_top = 0.138137
offset_right = 38.8095
offset_bottom = 40.1381
scale = Vector2(3, 3)
color = Color(0.0588235, 0.0588235, 0.0588235, 0.227451)

[node name="RichTextLabel" type="RichTextLabel" parent="Menu2"]
offset_left = 21.0
offset_right = 1489.0
offset_bottom = 376.0
scale = Vector2(0.05, 0.05)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 50
theme_override_font_sizes/normal_font_size = 300
text = " PAUSED"

[node name="Resume" type="Button" parent="Menu2"]
offset_left = 20.0681
offset_top = 28.453
offset_right = 8020.07
offset_bottom = 1495.45
scale = Vector2(0.0100167, 0.0100167)
focus_neighbor_bottom = NodePath("../Return")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 180
theme_override_font_sizes/font_size = 1200
theme_override_styles/focus = ExtResource("20_8g3gr")
theme_override_styles/hover = ExtResource("20_8g3gr")
theme_override_styles/pressed = ExtResource("20_8g3gr")
theme_override_styles/normal = ExtResource("19_okrwj")
text = "RESUME"

[node name="Return" type="Button" parent="Menu2"]
offset_left = 21.4287
offset_top = 59.3922
offset_right = 8021.43
offset_bottom = 1526.39
scale = Vector2(0.01, 0.01)
focus_neighbor_top = NodePath("../Resume")
focus_neighbor_bottom = NodePath("../Quit")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 180
theme_override_font_sizes/font_size = 1200
theme_override_styles/focus = ExtResource("20_8g3gr")
theme_override_styles/hover = ExtResource("20_8g3gr")
theme_override_styles/pressed = ExtResource("20_8g3gr")
theme_override_styles/normal = ExtResource("19_okrwj")
text = "MAIN MENU"

[node name="Quit" type="Button" parent="Menu2"]
offset_left = 21.0
offset_top = 93.0
offset_right = 8303.0
offset_bottom = 1560.0
scale = Vector2(0.01, 0.01)
focus_neighbor_top = NodePath("../Return")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 180
theme_override_font_sizes/font_size = 1200
theme_override_styles/focus = ExtResource("20_8g3gr")
theme_override_styles/hover = ExtResource("20_8g3gr")
theme_override_styles/pressed = ExtResource("20_8g3gr")
theme_override_styles/normal = ExtResource("19_okrwj")
text = "QUIT"

[node name="ResumeMobile" type="TouchScreenButton" parent="Menu2"]
position = Vector2(59.864, 35.3591)
scale = Vector2(4.0136, 0.707182)
shape = SubResource("RectangleShape2D_u0xf6")

[node name="ReturnMobile" type="TouchScreenButton" parent="Menu2"]
position = Vector2(60.3742, 66.7127)
scale = Vector2(4.0136, 0.707182)
shape = SubResource("RectangleShape2D_u0xf6")

[node name="QuitMobile" type="TouchScreenButton" parent="Menu2"]
position = Vector2(62.0749, 100.552)
scale = Vector2(4.0136, 0.707182)
shape = SubResource("RectangleShape2D_u0xf6")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5

[node name="RaycastUpTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="RayCast2D_Right" type="RayCast2D" parent="."]
position = Vector2(0, -18.9024)
target_position = Vector2(20.122, 0)

[node name="RayCast2D_Up" type="RayCast2D" parent="."]
position = Vector2(0.609756, -89.6341)
target_position = Vector2(0, -16.4634)

[node name="RayCast2D_Left" type="RayCast2D" parent="."]
position = Vector2(0, -18.9024)
target_position = Vector2(-18.2927, 0)

[node name="RayCast2D_RightH" type="RayCast2D" parent="."]
position = Vector2(0, -67.6829)
target_position = Vector2(20.122, 0)

[node name="RayCast2D_LeftH" type="RayCast2D" parent="."]
position = Vector2(0, -67.6829)
target_position = Vector2(-18.2927, 0)

[node name="The world" parent="." instance=ExtResource("23_tykk5")]
position = Vector2(-54.2683, -116.463)
scale = Vector2(2.25951, 2.25951)

[connection signal="pressed" from="MobileControls/Left" to="." method="_on_left_pressed"]
[connection signal="released" from="MobileControls/Left" to="." method="_on_left_released"]
[connection signal="pressed" from="MobileControls/Right" to="." method="_on_right_pressed"]
[connection signal="released" from="MobileControls/Right" to="." method="_on_right_released"]
[connection signal="pressed" from="MobileControls/Jump" to="." method="_on_jump_pressed"]
[connection signal="released" from="MobileControls/Jump" to="." method="_on_jump_released"]
[connection signal="pressed" from="MobileControls/Interact" to="." method="_on_interact_pressed"]
[connection signal="released" from="MobileControls/Interact" to="." method="_on_interact_released"]
[connection signal="pressed" from="MobileControls/Menu" to="." method="_on_menu_pressed"]
[connection signal="released" from="MobileControls/Menu" to="." method="_on_menu_released"]
[connection signal="pressed" from="MobileControls/Dance" to="." method="_on_dance_pressed"]
[connection signal="released" from="MobileControls/Dance" to="." method="_on_dance_released"]
[connection signal="pressed" from="MobileControls/Up" to="." method="_on_up_pressed"]
[connection signal="released" from="MobileControls/Up" to="." method="_on_up_released"]
[connection signal="pressed" from="MobileControls/Down" to="." method="_on_down_pressed"]
[connection signal="released" from="MobileControls/Down" to="." method="_on_down_released"]
[connection signal="pressed" from="MobileControls/Dialog" to="." method="_on_dialog_pressed"]
[connection signal="released" from="MobileControls/Dialog" to="." method="_on_dialog_released"]
[connection signal="pressed" from="Menu2/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Menu2/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="Menu2/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Menu2/ResumeMobile" to="." method="_on_resume_mobile_pressed"]
[connection signal="pressed" from="Menu2/ReturnMobile" to="." method="_on_return_mobile_pressed"]
[connection signal="pressed" from="Menu2/QuitMobile" to="." method="_on_quit_mobile_pressed"]
[connection signal="timeout" from="RaycastUpTimer" to="." method="_on_raycast_up_timer_timeout"]
